# fastapi-with-postgres

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db  tox.ini
.github/workflows/: testing.yml
scripts/: run-docker.sh  run-linters.sh  run-server.sh  run-tests.sh
src/fido_app/: main.py
src/fido_app/analytics/: stats.py
src/fido_app/api/transactions/: models.py  routes.py  schemas.py
src/fido_app/core/: config.py  database.py
src/fido_app/utils/: __init__.py  extentions.py
tests/: config.py  conftest.py  test_example.py
tests/test_analytics/: test_stats.py
tests/test_api/: test_routes.py
tests/test_api/test_transactions/: test_models.py  test_routes.py
