[tool.poetry]
name = "fido-api"
version = "0.1.0"
description = ""
authors = ["se7en <gideon.ahiadzi@gmail.com>"]
readme = "README.md"
packages = [{include = "fido_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
