[tool.poetry]
name = "fido-service"
version = "0.1.0"
description = ""
authors = ["se7en <gideon.ahiadzi@gmail.com>"]
readme = "README.md"
packages = [{include = "fido_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.2.0"
sqlalchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
